tests/fixtures/errors/view_locks_source.z
# E0200: a live map view holds a shared lock on its map — the map
# cannot be released out from under it.
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    g1: m.get key: "a".string
    m.release
    match (
        g1
    ) case some then {
        print g1
    } case none then {}
}
